--- a/app/templates/pedidos/pedidosadd.html
+++ b/app/templates/pedidos/pedidosadd.html
@@ -6,14 +6,14 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Cadastro de Cliente</title>
+<title>Emissão de Pedido</title>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="{% static 'css/stylepedido.css' %}">
 <script>
 $(document).ready(function(){
 	$('[data-toggle="tooltip"]').tooltip();
@@ -27,69 +27,51 @@ $(document).ready(function(){
                 <div class="table-title">
                     <div class="row">
                         <div class="col-xs-5">
-                            <h2>Adicionar um novo <b>Cliente</b></h2>
+                            <h2>Adicionar um novo <b>Pedido</b></h2>
                         </div>
                     </div>
                 </div>
                 {% block content %}
-                <form method="POST">
-                    {% csrf_token %}
-                    <div class="form-group col-md-6">
-                        <label for="nome_cliente">Nome</label>
-                        {% render_field form.nome_cliente class+="form-control" %}
-                    </div>
+                    <form method="POST">
+                        {% csrf_token %}
 
-                    <div class="form-group col-md-3">
-                        <label for="cpf">CPF</label>
-                        {% render_field form.cpf class+="form-control" %}
-                    </div>
+                        <div class="form-group col-md-1">
+                            <label for="id_cli">ID Cliente</label>
+                            {% render_field form.id_cli class+="form-control" %}
+                        </div>
 
-                    <div class="form-group col-md-3">
-                        <label for="rg">RG</label>
-                        {% render_field form.rg class+="form-control" %} 
-                    </div>
-                    <div class="form-group col-md-8">
-                        <label for="email">E-mail</label>
-                        {% render_field form.email class+="form-control" %} 
-                    </div>
-                    <div class="form-group col-md-2">
-                    <label for="telefone">Telefone</label>
-                        {% render_field form.telefone class+="form-control" %} 
-                    </div>
-                    <div class="form-group col-md-2">
-                        <label for="celular">Celular</label>
-                        {% render_field form.celular class+="form-control" %} 
+                        <div class="form-group col-md-11">
+                            <label for="nome_cli">Nome Cliente</label>
+                            {% render_field form.nome_cli class+="form-control" %}
                         </div>
-                    <div class="form-group col-md-7">
-                    <label for="endereco">Endereço</label>
-                        {% render_field form.endereco class+="form-control" %} 
-                    </div>
-                    <div class="form-group col-md-5">
-                        <label for="complemento">Complemento</label>
-                        {% render_field form.complemento class+="form-control" %} 
+
+                        <div class="form-group col-md-1">
+                            <label for="id_produto">ID Pro</label>
+                            {% render_field form.id_produto class+="form-control" %}
                         </div>
-                    <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="cidade">Cidade</label>
-                        {% render_field form.cidade class+="form-control" %} 
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label for="inputState">Estado</label>
-                        {% render_field form.estado class+="form-control" %} 
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label for="cep">CEP</label>
-                        {% render_field form.cep class+="form-control" %} 
-                    </div>
-                    <div class=text-right>
-                        <input type="submit" class="btn btn-primary" value="Cadastrar">
-                    </div>
-                </form>
+
+                        <div class="form-group col-md-6">
+                            <label for="nome_produto">Nome Produto</label>
+                            {% render_field form.nome_produto class+="form-control" %}
+                        </div>
+
+                        <div class="form-group col-md-3">
+                            <label for="valor_produto">Valor Produto</label>
+                            {% render_field form.valor_produto class+="form-control" %}
+                        </div>
+
+                        <div class="form-group col-md-2 ">
+                            <label for="quantidade_produto">Quantidade Produto</label>
+                            {% render_field form.quantidade_produto class+="form-control" %} 
+                        </div>
+
+                        <div class=text-right>
+                            <input type="submit" class="btn btn-primary" value="Cadastrar">
+                        </div>
+                    </form>
                 {% endblock %}
             </div>  
         </div>
-    </div>
-</div>
-                
+    </div>             
 </body>
 </html>
